# fashion-size-fit-prediction

./: .env.example  .gitignore  DATA.md  LICENSES.md  README.md  pyproject.toml  requirements.txt
notebooks/: 01_size_bracketing.ipynb
results/: size_metrics.json
scripts/: 01_size_recommendation.py
